--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,20 +28,29 @@ jobs:
     - name: Run tests
       run: pytest tests
 
-#  docker:
-#    runs-on: ubuntu-latest
-#    needs: test # run docker build only if tests pass
-#    steps:
-#    - name: Checkout repository
-#      uses: actions/checkout@v3
-#
-#    - name: Build Docker image
-#      run: docker build -t flask-app .
-#
-#    - name: Run container (detached)
-#      run: docker run -d -p 5000:5000 --name flask-container flask-app
-#
-#    - name: Check if app is running
-#      run: |
-#        sleep 5
-#        curl http://127.0.0.1:5000/hello
+  docker:
+    runs-on: ubuntu-latest
+    needs: test # run docker build only if tests pass
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Docker image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/flask-app:latest .
+
+    - name: Push Docker image
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
+
+    - name: Run container (detached)
+      run: docker run -d -p 5000:5000 --name flask-container ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
+
+    - name: Check if app is running
+      run: |
+        sleep 5
+        curl http://127.0.0.1:5000/hello
